opam-version: "2.0"
maintainer: "coby@case.edu"
authors: ["Jacob Rosales Chase <coby@case.edu>"]
license: "MIT"
homepage: "https://github.com/RosalesJ/tldr-ocaml/"
bug-reports: "https://github.com/RosalesJ/tldr-ocaml/issues"
dev-repo: "git+https://github.com/RosalesJ/tldr-ocaml.git"
version: "0.0.1"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "core"
  "lwt"
  "ppx_jane"
  "terminal_size"
  "bos"
  "cohttp"
  "cohttp-lwt-unix"
  "lwt_ssl"
  "ssl" {= "0.5.5"}
  "ANSITerminal"
  "angstrom"
]
